user関連の表示をtask関連と同じように変更

--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -2,9 +2,8 @@
 
 
 .container
-  = link_to t('submit.new'), new_user_path
 
-  %table
+  %table#index.table.table-striped
     %tr
       %th
         = User.human_attribute_name :id
