--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -36,6 +36,8 @@
       %th
         = sort_link @q, :priority, Task.human_attribute_name(:priority)
       %th
+        = Task.human_attribute_name :user_id
+      %th
         = Task.human_attribute_name :started_on
       %th
         = sort_link @q, :ended_on, Task.human_attribute_name(:ended_on)
@@ -53,6 +55,8 @@
           = t("task.status.#{task.status}")
         %td
           = t("task.priority.#{task.priority}")
+        %td
+          = task.user.name
         %td
           = task.started_on
         %td
