ユーザー一覧に検索フォームを追加

--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -36,7 +36,7 @@
       %th
         = sort_link @q, :priority, Task.human_attribute_name(:priority)
       %th
-        = Task.human_attribute_name :user_id
+        = Task.human_attribute_name :user
       %th
         = Task.human_attribute_name :started_on
       %th
