--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -27,7 +27,7 @@
       %th
         = User.human_attribute_name :is_deleted
       %th
-        = Task.human_attribute_name :action
+        = t('label.action')
     - @users.each do |user|
       %tr
         %td
