--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -44,7 +44,7 @@
       %th
         = sort_link @q, :created_at, Task.human_attribute_name(:created_at)
       %th
-        = Task.human_attribute_name :action
+        = t('label.action')
     - @tasks.each do |task|
       %tr
         %td
