（再）一覧の「操作」のラベルを共通化

--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -27,7 +27,7 @@
       %th
         = User.human_attribute_name :is_deleted
       %th
-        = t('label.action')
+        = t('index.label.action')
     - @users.each do |user|
       %tr
         %td
