--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -25,7 +25,7 @@
       %th
         = User.human_attribute_name :updated_at
       %th
-        = User.human_attribute_name :is_deleted
+        = User.human_attribute_name :deleted
       %th
         = t('index.label.action')
     - @users.each do |user|
@@ -43,7 +43,7 @@
         %td
           = user.updated_at
         %td
-          = user.is_deleted
+          = user.deleted
         %td
           = link_to t(:link_to_show), user_path(user)
           ／
