ログイン画面とそれっぽい動作を追加

--- a/app/assets/stylesheets/tasks.sass
+++ b/app/assets/stylesheets/tasks.sass
@@ -3,6 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 $white: #ffffff
 $blue: #295890
+$red: #ff0000
 $purple: #eeefff
 $red: #ff0000
 
@@ -97,14 +98,19 @@ textarea
   margin:
     top: 20px
     bottom: 20px
-
-.success-message
-  background: $blue
-  color: $white
   padding:
     left: 15px
     top: 5px
     bottom: 5px
+
+.success-message
+  background: $blue
+  color: $white
+
+.failed-message
+  background: $white
+  color: $red
+
 
 footer
   margin: 20px auto
