--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,6 +8,12 @@
         = link_to t('title_index', title: User.model_name.human), users_path, class: 'nav-link'
       %li.nav-item
         = link_to t('title_index', title: Task.model_name.human), tasks_path, class: 'nav-link'
+      - if current_user
+        %li.nav-item
+          = link_to 'ログアウト', logout_path, method: :delete, class: 'nav-link'
+      - else
+        %li.nav-item
+          = link_to 'ログイン', login_path, class: 'nav-link'
 
   - if flash[:success]
     .flash.success-message
